add admin login and fix proxy for front
